# wine-quality-forecasting

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: deploy.yml
data/processed/: vivino_wine_test_label.csv  vivino_wine_test_label.parquet  vivino_wine_train_label.csv  vivino_wine_train_label.parquet  vivino_wines_with_weather.csv  vivino_wines_with_weather.parquet  vivino_wines_with_weather_AOC.csv  vivino_wines_with_weather_AOC.parquet  vivino_wines_with_weather_with_aoc_coords_UPDATED.csv
docs/: index.html
scripts/: FTT.py  TabNet.py  baseline.py  mlp_pipeline.py  run_baselines.py  run_ftt.py  run_mlp.py  run_mlp_pipeline.py  run_tabnet.py  search_optuna.py
src/config/: logging.yaml
src/preprocessing/: WineWeathermerger.py  build_wines_coord.py  feature_Engineering.py  merge_wine_weather.py
src/scraping/: Vivinoscraper.py  scrapper_region.py
src/utils/: config_logger.py  seed.py
tests/test_models/: test_activation.py  test_blocks.py  test_classical_estimators.py  test_classical_pipeline.py  test_cross_validation.py  test_early_stopper.py  test_embedding.py  test_ft_transformer.py  test_ftt_builder.py  test_ftt_runner.py  test_losses.py  test_metrics_utils.py  test_mlp.py  test_mlp_builder.py  test_mlp_runner.py  test_model_factory.py  test_plot_metric.py  test_preprocessors.py  test_scope.py  test_seed.py  test_tabnet.py  test_tabnet_builder.py  test_tabnet_runner.py  test_tabular_mlp.py  test_trainer_tabular.py  test_utils_data.py  test_wine_data_module.py
tests/test_preprocessing/: test_build_wine_coord.py  test_coord_utils.py  test_feature_engineering.py  test_feature_utils.py  test_geo_utils.py  test_merge_wine_weather.py  test_text_utils.py  (+1 more)
wine-landing/: next.config.js  package-lock.json  package.json
(+151 files in other folders)
